--- a/source/index.html
+++ b/source/index.html
@@ -19,24 +19,24 @@
               <path class="page-header__logo--yellow" d="M6.4,25.7c0,0-3.8-1.4-5.2-1.8c-0.4-0.1-0.8-0.2-1.2-0.3c0.2,6,3.7,11.3,8.7,14L6.4,25.7z"/>
             </g>
             <path class="page-header__logo--red" d="M26.3,17.1c0.1-8.5-1.4-16.5-1.4-16.5S24.7-0.6,24,0.4c-0.7,1.1-1.2,3.9-1.2,3.9c-7.4-0.4-12.8,0.3-12.8,0.3&#10;  C9.2,2,7.9,0.8,7.2,1C6.5,1.3,6.5,4.4,6.5,4.4L6.1,18.5C12.8,17.5,19.6,17.1,26.3,17.1z"/>
-            <path d="M12.4,14c0-0.1,1,0.7,1.4,0.9c0.4,0.2,0.6,0.4,0.6,0.6c0,0.2-0.3,0.3-0.6,0.3s-0.9-0.1-1-0.3c0,0,0.6,0,0.9,0h0.3&#10;  C14.1,15.6,12.7,14.5,12.4,14z"/>
-            <path d="M19.9,14.1c0,0-1,1.3-1.1,1.3c0,0.1-0.2,0.3,0.2,0.3s1.1-0.2,1.2-0.3c0.1-0.1,0.1-0.2-0.1-0.2c-0.2,0-0.7,0-1,0.1L19.9,14.1&#10;  C19.9,14.1,20,14,19.9,14.1z"/>
-            <path d="M16.8,20.2c0,0,0.8-0.4,1.1-1c0.3-0.7,0-0.9-0.4-1c-0.5-0.1-1.3,0-1.7,0.3c-0.4,0.4-0.3,0.7-0.1,1&#10;  C15.9,19.7,16.5,20.1,16.8,20.2z"/>
+            <path class="page-header__logo--black" d="M12.4,14c0-0.1,1,0.7,1.4,0.9c0.4,0.2,0.6,0.4,0.6,0.6c0,0.2-0.3,0.3-0.6,0.3s-0.9-0.1-1-0.3c0,0,0.6,0,0.9,0h0.3&#10;  C14.1,15.6,12.7,14.5,12.4,14z"/>
+            <path class="page-header__logo--black" d="M19.9,14.1c0,0-1,1.3-1.1,1.3c0,0.1-0.2,0.3,0.2,0.3s1.1-0.2,1.2-0.3c0.1-0.1,0.1-0.2-0.1-0.2c-0.2,0-0.7,0-1,0.1L19.9,14.1&#10;  C19.9,14.1,20,14,19.9,14.1z"/>
+            <path class="page-header__logo--black" d="M16.8,20.2c0,0,0.8-0.4,1.1-1c0.3-0.7,0-0.9-0.4-1c-0.5-0.1-1.3,0-1.7,0.3c-0.4,0.4-0.3,0.7-0.1,1&#10;  C15.9,19.7,16.5,20.1,16.8,20.2z"/>
             <path class="page-header__logo--red" d="M16.3,21.5c0,0-0.2,0.4-0.5,0.6c-0.2,0.2-0.6,0.4-1,0.4c-0.6,0-1.1-0.2-1.5-0.4c-0.2-0.1-0.4-0.3-0.5-0.4&#10;  c-0.2-0.2-0.4-0.3-0.4-0.3s0.7,4.1,2.6,4.7c1.8,0.6,2.1-0.7,2.2-1.1c0-0.3,0-2.1-0.8-3.2C16.5,21.4,16.4,21.6,16.3,21.5z"/>
             <g>
               <path d="M14.7,22.6C14.7,22.6,14.7,22.6,14.7,22.6c-1.3,0-2.3-1.4-2.3-1.4c0-0.1,0-0.2,0-0.2c0.1,0,0.2,0,0.2,0c0,0,1,1.3,2.1,1.3&#10;    c0,0,0,0,0,0c0.6,0,1.1-0.3,1.6-1l0.1-0.2l0.1,0.2c0,0,0.4,0.8,1,0.8c0.5,0,1.1-0.4,1.6-1.3c0-0.1,0.1-0.1,0.2,0&#10;    c0.1,0,0.1,0.1,0,0.2c-0.6,1-1.3,1.4-1.9,1.4c-0.6,0-0.9-0.5-1.1-0.8C15.9,22.3,15.3,22.6,14.7,22.6z"/>
             </g>
             <path class="page-header__logo--red" d="M26.2,18.9c0,0-2.5,2.2-5.1,5.2S15.9,29,15.9,29c-0.2-0.5-1.6-1.5-1.6-1.5s-3.1-2.1-5.2-3.8&#10;  c-1.2-1-2.3-2.2-3.1-3c-0.3,0-1.1-0.1-2-0.1c4.7,7,12,8.8,12,8.8c0.9-0.1,3.3-1.9,5.1-3.3c1.8-1.4,4.8-4.5,5.9-5.9&#10;  c0.6-0.7,0.9-1.4,1.1-2C27,18.6,26.2,18.9,26.2,18.9z"/>
             <g transform="matrix(1, 0, 0, 1, 90, 10.200001)">
-              <path class="page-header__logo--yellow" d="M1.2,16.6c-0.8-1-1.2-2.5-1.2-4.4V5.9c0-1.9,0.4-3.4,1.2-4.4C2,0.5,3.4,0,5.4,0c1.9,0,3.2,0.4,4,1.3&#10;    c0.8,0.9,1.2,2.1,1.2,3.8v1.5H6.6V4.8c0-0.7-0.1-1.2-0.2-1.6C6.3,2.9,5.9,2.7,5.4,2.7S4.4,2.9,4.3,3.3C4.1,3.7,4,4.2,4,4.9v8.3&#10;    c0,0.7,0.1,1.2,0.3,1.6c0.2,0.4,0.5,0.6,1.1,0.6c0.5,0,0.9-0.2,1-0.6c0.2-0.4,0.2-0.9,0.2-1.6v-1.8h3.9v1.5c0,1.6-0.4,2.9-1.2,3.9&#10;    c-0.8,0.9-2.1,1.4-4,1.4C3.4,18.1,2,17.6,1.2,16.6z" style="fill: rgb(17, 17, 17);"/>
-              <path class="page-header__logo--yellow" d="M15.2,0.2h4.5L23,17.8h-3.6l-0.6-3.7h-2.6l-0.6,3.7h-3.7L15.2,0.2z M18.4,11.8l-0.9-6.9l-0.9,6.9H18.4z" style="fill: rgb(17, 17, 17);"/>
-              <path class="page-header__logo--yellow" d="M25.8,3.1h-2.7V0.2h9.3v2.9h-2.7v14.7h-4V3.1z" style="fill: rgb(17, 17, 17);"/>
-              <path class="page-header__logo--yellow" d="M39.5,0.2h6.9v1.8H42v5.8h3.6v1.7H42v6.4h4.5v1.8h-7V0.2z" style="fill: rgb(17, 17, 17);"/>
-              <path class="page-header__logo--yellow" d="M48.5,0.2h1.7l5.1,11.7V0.2h2.1v17.6h-1.6l-5.1-12v12h-2.1V0.2z" style="fill: rgb(17, 17, 17);"/>
-              <path class="page-header__logo--yellow" d="M59.8,0.2h6.9v1.8h-4.4v5.8h3.6v1.7h-3.6v6.4h4.5v1.8h-7V0.2z" style="fill: rgb(17, 17, 17);"/>
-              <path class="page-header__logo--yellow" d="M68.8,0.2h3.6c1.8,0,3.1,0.4,4,1.1s1.3,1.9,1.3,3.6c0,2.3-0.7,3.6-2.2,4.1l2.5,8.8h-2.4l-2.3-8.3h-1.9v8.3&#10;    h-2.5V0.2z M72.2,7.8c1.1,0,1.8-0.2,2.3-0.6C75,6.8,75.2,6,75.2,4.9c0-0.7-0.1-1.3-0.2-1.7s-0.4-0.7-0.9-0.9&#10;    c-0.4-0.2-1-0.3-1.7-0.3h-1.1v5.8H72.2z" style="fill: rgb(17, 17, 17);"/>
-              <path class="page-header__logo--yellow" d="M80.8,16.5c-0.7-1-1.1-2.5-1.1-4.5V6.2c0-1.4,0.1-2.5,0.4-3.4c0.3-0.9,0.8-1.5,1.5-2c0.7-0.5,1.7-0.7,2.9-0.7&#10;    c1.6,0,2.8,0.4,3.6,1.2c0.7,0.8,1.1,2.1,1.1,3.9v0.7h-2.3V5.3c0-0.8-0.1-1.5-0.2-1.9c-0.1-0.5-0.3-0.8-0.7-1&#10;    C85.7,2.1,85.2,2,84.6,2c-0.7,0-1.2,0.2-1.5,0.5c-0.3,0.3-0.6,0.7-0.7,1.2c-0.1,0.5-0.1,1.2-0.1,2.1v6.5c0,1.3,0.2,2.3,0.5,2.9&#10;    c0.3,0.6,1,0.9,1.9,0.9c0.9,0,1.6-0.3,1.9-1c0.3-0.6,0.5-1.7,0.5-3.1v-1.2h-2.3V9.1h4.5v8.7h-1.6l-0.2-2c-0.6,1.5-1.6,2.2-3.2,2.2&#10;    C82.7,18,81.5,17.5,80.8,16.5z" style="fill: rgb(17, 17, 17);"/>
-              <path class="page-header__logo--yellow" d="M94.3,11.6L90.4,0.2h2.3l2.7,8.5l2.7-8.5h2.3l-3.8,11.4v6.2h-2.4V11.6z" style="fill: rgb(17, 17, 17);"/>
+              <path class="page-header__logo--black" d="M1.2,16.6c-0.8-1-1.2-2.5-1.2-4.4V5.9c0-1.9,0.4-3.4,1.2-4.4C2,0.5,3.4,0,5.4,0c1.9,0,3.2,0.4,4,1.3&#10;    c0.8,0.9,1.2,2.1,1.2,3.8v1.5H6.6V4.8c0-0.7-0.1-1.2-0.2-1.6C6.3,2.9,5.9,2.7,5.4,2.7S4.4,2.9,4.3,3.3C4.1,3.7,4,4.2,4,4.9v8.3&#10;    c0,0.7,0.1,1.2,0.3,1.6c0.2,0.4,0.5,0.6,1.1,0.6c0.5,0,0.9-0.2,1-0.6c0.2-0.4,0.2-0.9,0.2-1.6v-1.8h3.9v1.5c0,1.6-0.4,2.9-1.2,3.9&#10;    c-0.8,0.9-2.1,1.4-4,1.4C3.4,18.1,2,17.6,1.2,16.6z"/>
+              <path class="page-header__logo--black" d="M15.2,0.2h4.5L23,17.8h-3.6l-0.6-3.7h-2.6l-0.6,3.7h-3.7L15.2,0.2z M18.4,11.8l-0.9-6.9l-0.9,6.9H18.4z"/>
+              <path class="page-header__logo--black" d="M25.8,3.1h-2.7V0.2h9.3v2.9h-2.7v14.7h-4V3.1z"/>
+              <path class="page-header__logo--black" d="M39.5,0.2h6.9v1.8H42v5.8h3.6v1.7H42v6.4h4.5v1.8h-7V0.2z"/>
+              <path class="page-header__logo--black" d="M48.5,0.2h1.7l5.1,11.7V0.2h2.1v17.6h-1.6l-5.1-12v12h-2.1V0.2z"/>
+              <path class="page-header__logo--black" d="M59.8,0.2h6.9v1.8h-4.4v5.8h3.6v1.7h-3.6v6.4h4.5v1.8h-7V0.2z"/>
+              <path class="page-header__logo--black" d="M68.8,0.2h3.6c1.8,0,3.1,0.4,4,1.1s1.3,1.9,1.3,3.6c0,2.3-0.7,3.6-2.2,4.1l2.5,8.8h-2.4l-2.3-8.3h-1.9v8.3&#10;    h-2.5V0.2z M72.2,7.8c1.1,0,1.8-0.2,2.3-0.6C75,6.8,75.2,6,75.2,4.9c0-0.7-0.1-1.3-0.2-1.7s-0.4-0.7-0.9-0.9&#10;    c-0.4-0.2-1-0.3-1.7-0.3h-1.1v5.8H72.2z"/>
+              <path class="page-header__logo--black" d="M80.8,16.5c-0.7-1-1.1-2.5-1.1-4.5V6.2c0-1.4,0.1-2.5,0.4-3.4c0.3-0.9,0.8-1.5,1.5-2c0.7-0.5,1.7-0.7,2.9-0.7&#10;    c1.6,0,2.8,0.4,3.6,1.2c0.7,0.8,1.1,2.1,1.1,3.9v0.7h-2.3V5.3c0-0.8-0.1-1.5-0.2-1.9c-0.1-0.5-0.3-0.8-0.7-1&#10;    C85.7,2.1,85.2,2,84.6,2c-0.7,0-1.2,0.2-1.5,0.5c-0.3,0.3-0.6,0.7-0.7,1.2c-0.1,0.5-0.1,1.2-0.1,2.1v6.5c0,1.3,0.2,2.3,0.5,2.9&#10;    c0.3,0.6,1,0.9,1.9,0.9c0.9,0,1.6-0.3,1.9-1c0.3-0.6,0.5-1.7,0.5-3.1v-1.2h-2.3V9.1h4.5v8.7h-1.6l-0.2-2c-0.6,1.5-1.6,2.2-3.2,2.2&#10;    C82.7,18,81.5,17.5,80.8,16.5z"/>
+              <path class="page-header__logo--black" d="M94.3,11.6L90.4,0.2h2.3l2.7,8.5l2.7-8.5h2.3l-3.8,11.4v6.2h-2.4V11.6z"/>
             </g>
             </svg>
           </a>
@@ -115,43 +115,47 @@
       </section>
 
       <section class="example">
-        <div class="example__stats-block">
-          <h2 class="example__title">Живой пример</h2>
-          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-          <div class="example__wrapper">
-            <div class="example__stats">
-              <p class="example__txt">5 кг</p>
-              <p class="example__txt">60 дней</p>
-            </div>
-            <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
-          </div>
-        </div>
-        <div class="example__toggle-block slider">
-          <input class="slide-1 visually-hidden" type="radio" id="slide-1" name="slide-group" checked>
-          <input class="slide-2 visually-hidden" type="radio" id="slide-2" name="slide-group">
-          <ul class="example__slider-list">
-            <li class="example__slider-item example__photo-before">
-              <picture>
-                <source media="(min-width: 1220px)" srcset="img/before-desktop@1x.png">
-                <source media="(min-width: 708px)" srcset="img/before-tablet@1x.png">
-                <img class="example__slider-image example__slider-image--before" src="img/before-mobile@1x.png" alt="Фото кота до программы">
-              </picture>
-            </li>
-            <li class="example__slider-item example__photo-after">
-              <picture>
-                <source media="(min-width: 1220px)" srcset="img/after-desktop@1x.png">
-                <source media="(min-width: 708px)" srcset="img/after-tablet@1x.png">
-                <img class="example__slider-image example__slider-image--after" src="img/after-mobile@1x.png" alt="Фото кота после программы">
-              </picture>
-            </li>
-          </ul>
-          <div class="example__controls range-controls">
-            <div class="range-controls__wrapper">
-              <label class="slide-contols__prev range-controls__txt" for="slide-1">Было</label>
-              <div class="range-controls__toggle">
-                <div class="range-controls__bar"></div>
+        <h2 class="example__title">Живой пример</h2>
+        <div class="example__content">
+          <div class="example__center-wrap">
+            <div class="example__stats-block">
+              <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+              <div class="example__info">
+                <div class="example__stats">
+                  <p class="example__txt">5 кг</p>
+                  <p class="example__txt">60 дней</p>
+                </div>
+                <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
               </div>
-              <label class="slide-contols__next range-controls__txt" for="slide-2">Стало</label>
+            </div>
+            <div class="example__toggle-block slider">
+              <input class="slide-1 visually-hidden" type="radio" id="slide-1" name="slide-group" checked>
+              <input class="slide-2 visually-hidden" type="radio" id="slide-2" name="slide-group">
+              <ul class="example__slider-list">
+                <li class="example__slider-item example__photo-before">
+                  <picture>
+                    <source media="(min-width: 1220px)" srcset="img/before-desktop@1x.png">
+                    <source media="(min-width: 708px)" srcset="img/before-tablet@1x.png">
+                    <img class="example__slider-image example__slider-image--before" src="img/before-mobile@1x.png" alt="Фото кота до программы">
+                  </picture>
+                </li>
+                <li class="example__slider-item example__photo-after">
+                  <picture>
+                    <source media="(min-width: 1220px)" srcset="img/after-desktop@1x.png">
+                    <source media="(min-width: 708px)" srcset="img/after-tablet@1x.png">
+                    <img class="example__slider-image example__slider-image--after" src="img/after-mobile@1x.png" alt="Фото кота после программы">
+                  </picture>
+                </li>
+              </ul>
+              <div class="example__controls range-controls">
+                <div class="range-controls__wrapper">
+                  <label class="slide-contols__prev range-controls__txt" for="slide-1">Было</label>
+                  <div class="range-controls__toggle">
+                    <div class="range-controls__bar"></div>
+                  </div>
+                  <label class="slide-contols__next range-controls__txt" for="slide-2">Стало</label>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -162,13 +166,16 @@
           <h2 class="contacts__title">приглашаем к сотрудничеству дилеров!</h2>
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </div>
-        <a class="contacts__map-open" href="#">
-          <picture>
-            <source media="(min-width: 1220px)" srcset="/img/bg-map-desktop@1x.png">
-            <source media="(min-width: 708px)" srcset="/img/bg-map-tablet@1x.png">
-            <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
-          </picture>
-        </a>
+        <div class="contacts__wrap">
+          <iframe class="contacts__iframe" src="https://yandex.com/map-widget/v1/-/CGtZVQID" width="560" height="400" frameborder="1" allowfullscreen="true"></iframe>
+          <a class="contacts__map-open" href="map.html">
+            <picture>
+              <source media="(min-width: 1220px)" srcset="/img/bg-map-desktop@1x.png">
+              <source media="(min-width: 708px)" srcset="/img/bg-map-tablet@1x.png">
+              <img class="contacts__map" src="img/bg-map-mobile@1x.png" alt="Офис компании по адресу: ул. Большая Конюшенная, д. 19/8, Санкт-Петербург">
+            </picture>
+          </a>
+        </div>
       </section>
     </main>
 
@@ -236,7 +243,7 @@
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#">
               <span class="visually-hidden">Мы в Фейсбуке</span>
-              <svg class="social__icon" width="10" height="19" viewBox="0 0 10 19">
+              <svg class="social__icon" viewBox="0 0 10 19" width="10" height="19">
                 <g>
                     <path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
                     h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18z"/>
@@ -249,8 +256,10 @@
         <div class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://up.htmlacademy.ru/adaptive/18">
             <p class="copyright__text">HTML Academy</p>
-            <svg class="copyright__logo" viewBox="0 0 60 60">
-              <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+            <svg class="copyright__logo" viewBox="0 0 60 60" width="27" height="34">
+              <g>
+                  <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+              </g>
             </svg>
           </a>
         </div>
